# python-bazel-example

./: .bazelrc  .bazelversion  WORKSPACE
adirectory/pypackage/: BUILD.bazel
adirectory/pypackage/example/: BUILD.bazel  module.py  module_test.py
adirectory/pypackage/example/nested/: BUILD.bazel  module.py  module_test.py
project/example/: BUILD.bazel  example.py  example_test.py
project/example/nested/: BUILD.bazel  nested.py  nested_test.py
