package(default_visibility = ["//visibility:public"])

py_library(
    name="example",
    srcs=[":srcs"],
    deps=["//adirectory/pypackage/example/nested:nested"],
    imports=["../.."], # this is insane..
)

py_test(
    name="module_test",
    srcs=["module_test.py"],
    deps=["example"],
)


filegroup(
    name="srcs",
    srcs=glob(["*.py"]),
)