package(default_visibility = ["//visibility:public"])

py_library(
    name="nested",
    srcs=[
        ":srcs"
    ],
    imports=["../../.."], # this is insane..
)

py_test(
    name="module_test",
    srcs=["module_test.py"],
    deps=[":nested"],
)


filegroup(
    name="srcs",
    srcs=glob(["*.py"]),
)